# prompt-diff

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
prompt_diff/: __init__.py  __main__.py  cli.py  engine.py
tests/: test_cli.py  test_engine.py
